--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
     "react-leaflet": "^3.0.1",
+    "react-modal": "^3.11.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-spring": "^8.0.27",
@@ -44,6 +45,7 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.5.19",
+    "@types/react-modal": "^3.10.6",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
