Main application finished

--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -28,8 +28,11 @@
   ],
   "rules": {
     "no-unused-vars": "warn",
+    "react/prop-types": "off",
     "no-use-before-define": "off",
     "prettier/prettier": "error",
+    "react/jsx-props-no-spreading": "off",
+    "react/require-default-props": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
