--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@unform/core": "^2.1.3",
+    "@unform/web": "^2.1.3",
     "axios": "^0.21.0",
     "leaflet": "^1.7.1",
     "polished": "^4.0.3",
@@ -23,7 +25,9 @@
     "react-spring": "^8.0.27",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "uuidv4": "^6.2.5",
+    "web-vitals": "^0.2.4",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,6 +52,7 @@
     "@types/react-modal": "^3.10.6",
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
+    "@types/yup": "^0.29.9",
     "@typescript-eslint/eslint-plugin": "^4.6.1",
     "@typescript-eslint/parser": "^4.6.1",
     "eslint": "^7.13.0",
