--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.3.3",
+    "mongodb": "^3.6.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.28",
     "uuidv4": "^6.2.3"
@@ -25,7 +25,7 @@
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "@types/jsonwebtoken": "^8.5.0",
-    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^3.10.1",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "^14.2.0",
