--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "@unform/core": "^2.1.3",
     "@unform/web": "^2.1.3",
     "axios": "^0.21.0",
+    "date-fns": "^2.16.1",
     "leaflet": "^1.7.1",
     "polished": "^4.0.3",
     "react": "^17.0.1",
